<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <PreferenceCategory
        android:title="@string/key"
        >
        <MultiSelectListPreference
            android:key="selected_keys"
            android:entries="@array/key_groups"
            android:entryValues="@array/key_groups"
            android:defaultValue="@array/key_groups_defaults"
            android:title="@string/choose_keys"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/chord"
        >
        <MultiSelectListPreference
            android:key="selected_chords_std"
            android:entries="@array/chords"
            android:entryValues="@array/chords"
            android:defaultValue="@array/chords_defaults"
            android:title="@string/choose_chords"
            />
        <EditTextPreference
            android:key="selected_chords_additional"
            android:defaultValue="dom7 m7 maj7 alt"
            android:selectAllOnFocus="false"
            android:singleLine="false"
            android:title="@string/additional_chords"
            app:useSimpleSummaryProvider="true"
            />
     </PreferenceCategory>

</PreferenceScreen>
    <!--
    -->