<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:menu="@menu/menu_main"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center_vertical"
        >
        <TextView
            android:id="@+id/label_chord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="24sp"
            android:text="@string/chord"
            />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/panel_background"
            android:minWidth="280dp"
            android:minHeight="240dp"
            >
            <TextView
                android:id="@+id/text_chord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="3"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:textSize="70sp"
                android:textColor="@color/chord_text"
                android:text="@string/no_chord"
                />
            <TextView
                android:id="@+id/text_chord_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:textSize="30sp"
                android:textColor="@color/chord_text_next"
                android:text="@string/no_chord"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:paddingTop="20dp"
        android:paddingBottom="0dp"
        >
        <TextView
            android:id="@+id/label_tempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_horizontal|center_vertical"
            android:textSize="24sp"
            android:text="@string/tempo"
            />
        <SeekBar
            android:id="@+id/slider_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="20dp"
            android:min="40"
            android:max="300"
            android:progress="120"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center"
            >
            <GridLayout
                android:id="@+id/beat1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginHorizontal="10dp"
                android:background="#CCC"
                />
            <GridLayout
                android:id="@+id/beat2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginHorizontal="10dp"
                android:background="#CCC"
                />
            <GridLayout
                android:id="@+id/beat3"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginHorizontal="10dp"
                android:background="#CCC"
                />
            <GridLayout
                android:id="@+id/beat4"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginHorizontal="10dp"
                android:background="#CCC"
                />
            <GridLayout
                android:id="@+id/beat5"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginHorizontal="10dp"
                android:visibility="gone"
                android:background="#CCC"
                />
            <GridLayout
                android:id="@+id/beat6"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginHorizontal="10dp"
                android:visibility="gone"
                android:background="#CCC"
                />
            <GridLayout
                android:id="@+id/beat7"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginHorizontal="10dp"
                android:visibility="gone"
                android:background="#CCC"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/button_start"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:maxWidth="100dp"
            android:paddingVertical="20dp"
            android:textSize="40sp"
            android:text="@string/start"
            />
        <Button
            android:id="@+id/button_next"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:maxWidth="100dp"
            android:paddingVertical="20dp"
            android:textSize="40sp"
            android:text="@string/next"
            />
    </LinearLayout>
</LinearLayout>
